tsa-submissions-coding-api/k3s/mongodb-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: coding-mongodb-service
  labels:
    app: coding
    tier: db
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: coding
    tier: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coding-mongodb
spec:
  selector:
    matchLabels:
      app: coding
      tier: db
  template:
    metadata:
      labels:
        app: coding
        tier: db
    spec:
      containers:
        - name: coding-mongodb
          image: mongo:latest
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
