tsa-submissions-coding-api/k3s/api-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: coding-api-service
  labels:
    app: coding
    tier: api
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  selector:
    app: coding
    tier: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coding-api-ingress
spec:
  rules:
  - host: api.coding.tsa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coding-api-service
            port:
              number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coding-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coding
      tier: api
  template:
    metadata:
      labels:
        app: coding
        tier: api
    spec:
      containers:
      - name: coding-api
        image: ghcr.io/tj-cappelletti/tsa/submissions/coding/webapi:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: api-http-svc
        livenessProbe:
          httpGet:
            path: /api/status
            port: api-http-svc
        readinessProbe:
          httpGet:
            path: /api/status
            port: api-http-svc
          initialDelaySeconds: 5
          timeoutSeconds: 15
